# product-distribution-ai

./: .editorconfig  .gitattributes  .gitignore  Makefile  README.md  create-mcp-readonly-user.sh  docker-compose.yml
.github/workflows/: ai-service-eval.yml  main-backend-sonar.yml  pr-ai-service-analysis.yml  pr-backend-test-and-sonar.yml  pr-data-validation.yml  pr-frontend-analysis.yml  pr-validation.yml
ai-service/: .gitignore  Dockerfile  README.md  pyproject.toml
ai-service/app/: __init__.py  config.py  main.py
ai-service/app/agents/: __init__.py  chart_agent.py  data_agent.py  main_agent.py  sql_agent.py
ai-service/app/agents/tools/: __init__.py  charts.py  metrics.py  toolbox_mcp.py
ai-service/app/core/: __init__.py  runner.py  session.py  streaming.py
ai-service/app/eval/: eval_config.json  eval_config_ci.json  goldenDataset.evalset.json  sampleDataset.evalset.json  test_agent_eval.py
ai-service/app/models/: __init__.py  chat.py  error_response.py  kpi.py  metrics.py
ai-service/app/routers/: chat.py  kpi.py
backend/: .dockerignore  Dockerfile  README.md  pom.xml
data/current/: products.json  warehouses.json
data/test/: products.json  stores.json  warehouses.json
frontend/: .dockerignore  .prettierrc.json  Dockerfile  angular.json  eslint.config.js  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts
frontend/src/environments/: environment.prod.ts  environment.ts
(+187 files in other folders)
